New CSS for phones @media query

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     --second-bg-color: #f0f0f0;
     --text-color: #1f242d;
     --main-color: hsl(209, 80%, 51%);
+    --primary-clr: #085cdb;
 }
 
 html {
@@ -299,6 +300,9 @@ span {
 
 .get_in_touch {
     min-height: 55vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .get_in_touch h2 {
@@ -310,9 +314,7 @@ span {
     line-height: 35px;
     text-align: center;
     padding-left: 20px;
-    /* Adjust the padding as needed */
     padding-right: 20px;
-    /* Adjust the padding as needed */
 }
 
 .get_in_touch a {
@@ -323,12 +325,10 @@ span {
     color: var(--second-bg-color);
     letter-spacing: 0.1rem;
     font-weight: 600;
-    text-align: justify;
+    text-align: center;
     transition: 0.5s ease;
-    margin-top: 40px;
-    margin-left: 500px;
-    margin-right: 500px;
-    position: center;
+    margin-top: 30px;
+    margin-bottom: 40px;
 }
 
 .footer {
@@ -470,3 +470,143 @@ span {
     line-height: 40px;
     gap: 2rem;
 }
+
+@media (max-width: 1200px) {
+    html {
+      font-size: 55%;
+    }
+  }
+  
+  @media (max-width: 991px) {
+    .header {
+      padding: 2rem 3%;
+    }
+
+    .home-img img {
+        width: 50vw;
+        margin-top: 4rem;
+      }
+    
+
+    section {
+      padding: 10rem 3% 2rem;
+    }
+  
+    .service {
+      padding-bottom: 7rem;
+    }
+  
+    .project {
+      padding-bottom: 7rem;
+    }
+  
+    .get_in_touch {
+      min-height: auto;
+    }
+  
+    .footer {
+      padding: 2rem 3%;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    #menu-icon {
+      display: block;
+    }
+  
+    .navbar {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      padding: 1rem 3%;
+      background: var(--bg-color);
+      border-top: .1rem solid rgba(0, 0, 0, .2);
+      box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+      display: none;
+    }
+  
+    .navbar.active {
+      display: block;
+    }
+  
+    .navbar a {
+      display: block;
+      font-size: 2rem;
+      margin: 3rem 0;
+    }
+  
+    .home {
+      flex-direction: column;
+    }
+  
+    .home-content h3 {
+      font-size: 2.6rem;
+    }
+  
+    .home-content h1 {
+      font-size: 5rem;
+    }
+  
+    .home-img img {
+      width: 70vw;
+      margin-top: 4rem;
+    }
+  
+    .about {
+      flex-direction: column-reverse;
+    }
+  
+    .about img {
+      width: 70vw;
+      margin-top: 4rem;
+    }
+  
+    .service h2 {
+      margin-bottom: 3rem;
+    }
+  
+    .project h2 {
+      margin-bottom: 3rem;
+    }
+  
+    .project-container {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  
+  @media (max-width: 617px) {
+    .project-container {
+      grid-template-columns: 1fr;
+    }
+  }
+  
+  @media (max-width: 450px) {
+    html {
+      font-size: 50%;
+    }
+  
+    .get_in_touch form .input-box input {
+      width: 100%;
+    }
+  }
+  
+  @media (max-width: 365px) {
+    .home-img img {
+      width: 90vw;
+    }
+  
+    .about img {
+      width: 90vw;
+    }
+  
+    .footer {
+      flex-direction: column-reverse;
+    }
+  
+    .footer p {
+      text-align: center;
+      margin-top: 2rem;
+    }
+  }
+  
